@@ -2,6 +2,6 @@
 
 set -e
 cd /app
-java -Djava.security.egd=file:/dev/./urandom -jar app.jar
+java --add-opens java.base/java.lang=ALL-UNNAMED -Djava.security.egd=file:/dev/./urandom -jar app.jar
 checkerror "Echec de java"
 sh -c "$@"
